--- a/HTMLpractice/Lesson0.html
+++ b/HTMLpractice/Lesson0.html
@@ -5,6 +5,6 @@
 </head>
 <body>
     <h1>Hello, World!</h1>
-    <p>This is my first webpage.asdkfa</p>
+    <p>This is my first webpage</p>
 </body>
 </html>
